# Lineage

./: .gitignore  Account.cc  Account.h  CMakeLists.txt  ClientPacket.cpp  ClientPacket.h  ClientThread.cpp  ClientThread.h  Common.cc  Common.h  Config.cc  Config.h  Config.py  Connection.cc  Connection.h  ConnectionManager.cc  ConnectionManager.h  ConnectionPoolManager.cc  ConnectionPoolManager.h  Datatables.py  GameServer.cc  GameServer.cpp  GameServer.h  GeneratorController.cc  GeneratorController.h  Lineage.cbp  Lineage.depend  Lineage.layout  Logger.h  LoginController.cc  LoginController.h  MagicNumber.h  Main.cc  Object.cc  Object.h  Opcodes.h  Packet.cpp  PacketHandler.cpp  PacketHandler.h  Player.cc  (+13 more)
ClientPackets/: CMakeLists.txt  C_AuthLogin.cc  C_AuthLogin.cpp  C_AuthLogin.h  C_CommonClick.cc  C_CommonClick.h  C_ServerVersion.cc  C_ServerVersion.cpp  C_ServerVersion.h  ClientPacket.cc  ClientPacket.h
Coordinate/: CMakeLists.txt  Location.cc  Location.h  Map.cc  Map.h  Point.cc  Point.h  Rect.cc  Rect.h  Tower.cc  Tower.h  TowerAoi.cc  TowerAoi.h  WorldMap.cc  WorldMap.h
Datatables/: CMakeLists.txt  WorldMap.cpp  WorldMap.h
Effects/: EffectStateMachine.cc  EffectStateMachine.h  EffectTimer.cc  EffectTimer.h
Module/: CMakeLists.txt  Map.cpp  Map.h  Point.cpp  Point.h
Schema/: Account.cpp  Account.h  CMakeLists.txt
ServerPackets/: CMakeLists.txt  S_CharAmount.cc  S_CharAmount.h  S_CharPacks.cc  S_CharPacks.h  S_CommonNews.cc  S_CommonNews.cpp  S_CommonNews.h  S_LoginResult.cc  S_LoginResult.cpp  S_LoginResult.h  S_ServerVersion.cc  S_ServerVersion.cpp  S_ServerVersion.h  ServerPacket.cc  ServerPacket.h
Tables/: Account.cc  Account.h  CMakeLists.txt  Character.cc  Character.h  Map.cc  Map.h
Templates/: Account.cc  Account.h  CMakeLists.txt  Character.cc  Character.h  Map.cc  Map.h
config/: additional.conf  altsettings.conf  charsettings.conf  fights.conf  logger.conf  pack.conf  rates.conf  server.conf  sql.properties  倍率设置.properties  其他设置.properties  战斗特化设置.properties  服务器设置.properties  记录设置.properties  调整测试设置.properties  进阶设置.properties
data/: badnames.txt  (+2 more)
(+214 files in other folders)
