CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Lineage)

#SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-std=c++11")

INCLUDE_DIRECTORIES(/usr/include /usr/local/include ${CMAKE_SOURCE_DIR})
ADD_SUBDIRECTORY("ClientPackets")
ADD_SUBDIRECTORY("Datatables")
ADD_SUBDIRECTORY("Module")
ADD_SUBDIRECTORY("Schema")
ADD_SUBDIRECTORY("ServerPackets")
AUX_SOURCE_DIRECTORY(. SRC)
ADD_EXECUTABLE(app ${SRC} $<TARGET_OBJECTS:clientpackets> $<TARGET_OBJECTS:datatables> $<TARGET_OBJECTS:module> $<TARGET_OBJECTS:schema> $<TARGET_OBJECTS:serverpackets>)
LINK_DIRECTORIES(/usr/lib64)
TARGET_LINK_LIBRARIES(app PocoNet PocoFoundation PocoData PocoDataMySQL PocoUtil boost_serialization-mt )
